# discord-metadata-server

./: Cargo.toml  README.md
src/: enrichment.rs  handler.rs  main.rs  result.rs  svc.rs
